Advertise configurable viewer UDP ports
